<resources>
    <string name="app_name">NEXTBEEN</string>
    <string name="app_desc">Mark your review to everyone</string>
    <string name="nav_menu_home">Home</string>
    <string name="nav_menu_search">Search</string>
    <string name="nav_menu_post">Post</string>
    <string name="nav_menu_notification">Notification</string>
    <string name="nav_menu_profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="auth_login_email">Email..</string>
    <string name="auth_login_password">Password...</string>
    <string name="auth_login_desc">Enter your world</string>
    <string name="auth_login">Login</string>
    <string name="auth_register_desc">Become a Reviewer</string>
    <string name="auth_profile">Login or Register</string>
    <string name="auth_register_re_password">Re Password...</string>
    <string name="auth_register_back_to_login">Already have an account!</string>
    <string name="auth_register">Register</string>
    <string name="auth_login_notification_success">Jump in successfully!</string>
    <string name="auth_login_notification_fail">Login failed! Something went wrong.</string>
    <string name="auth_login_error_invalid_email">Please enter valid email address</string>
    <string name="auth_login_error_invalid_password">Password minimum contain 6 character</string>
    <string name="auth_login_error_password_repassword_not_match">Password and Re Password is not matched!</string>
    <string name="auth_register_fullname">Full Name...</string>
    <string name="auth_register_error_empty_fullname">Your full name can\'t be empty</string>
    <string name="detail_mark_as_note">Mark As Note</string>
    <string name="detail_down_vote">Down vote</string>
    <string name="detail_up_vote">Up vote</string>
    <string name="detail_go_back">Go back</string>
    <string name="profile_your_avatar">Your avatar</string>
    <string name="profile_username">Username</string>
    <string name="profile_menu">Profile menu</string>
    <string name="profile_default_value">0</string>
    <string name="profile_posts">Posts</string>
    <string name="profile_followers">Followers</string>
    <string name="profile_following">Following</string>
    <string name="profile_edit_profile">Edit profile</string>
    <string name="profile_default_avatar_url"><![CDATA[https://firebasestorage.googleapis.com/v0/b/nextbeen-notech.appspot.com/o/avatar%2Fdefault_avatar.png?alt=media&token=35ec666f-fa6b-4abb-bbff-f80311ca3187]]></string>
    <string name="post_content_hint">Enter your feeling about this address..</string>
    <string name="post_title">GIVE US\nYOUR FEELING</string>
    <string name="backend_post_current_address">CURRENT_ADDRESS</string>
    <string name="post_add_photo">Add photo</string>
    <string name="post_post_review">Post Review</string>
</resources>