<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_home"
        android:title="@string/nav_menu_home"
        android:icon="@drawable/ic_baseline_home_24" />
    <item
        android:id="@+id/menu_search"
        android:title="@string/nav_menu_search"
        android:icon="@drawable/ic_baseline_search_24" />
    <item
        android:id="@+id/menu_post"
        android:title="@string/nav_menu_post"
        android:icon="@drawable/ic_baseline_add_location_24" />
    <item
        android:id="@+id/menu_notification"
        android:title="@string/nav_menu_notification"
        android:icon="@drawable/ic_baseline_notifications_24" />
    <item
        android:id="@+id/menu_profile"
        android:title="@string/nav_menu_profile"
        android:icon="@drawable/ic_baseline_person_24" />
</menu>