<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="40dp"
    tools:context=".fragments.auth.RegisterFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="40sp"
        android:fontFamily="sans-serif-black"
        android:textColor="@color/orange"
        android:layout_marginTop="110dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/auth_register_desc"
        android:textAlignment="center"
        android:textSize="20sp"
        android:fontFamily="serif-monospace"
        android:layout_marginBottom="50dp"
        />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/auth_login_email"
        android:autofillHints="emailAddress"
        android:inputType="textEmailAddress"
        android:layout_marginBottom="20dp"/>

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/auth_login_password"
        android:autofillHints="password"
        android:inputType="textPassword"
        android:layout_marginBottom="20dp" />

    <EditText
        android:id="@+id/editTextRePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/auth_register_re_password"
        android:autofillHints="password"
        android:inputType="textPassword"
        android:layout_marginBottom="20dp" />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/auth_register"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:id="@+id/textViewLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/auth_register_back_to_login"
        android:layout_gravity="end"
        android:textColor="@color/orange"
        />

</LinearLayout>